2005-03-30  Erik Hjortsberg  <erik@katastrof.nu>

	* Don't forget to copy .skeleton files.

2005-03-30  Erik Hjortsberg  <erik@katastrof.nu>

	* Use the low res grass texture by default.

2005-03-30  Erik Hjortsberg  <erik@katastrof.nu>

	* Use the more correct "License" 

2005-03-23  Erik Hjortsberg  <erik@katastrof.nu>

	* added fence building blocks modelmappings
	* added campfire and fire modeldefs

2005-03-23  Erik Hjortsberg  <erik@katastrof.nu>

	* Cleaned up the logging a little bit more.

2005-03-23  Erik Hjortsberg  <erik@katastrof.nu>

	* moved and cleaned up the media definitions. Now almost all needed media is in svn. The directory media/common should point to the svn repository.

2005-03-22  Erik Hjortsberg  <erik@katastrof.nu>

	* Added ember specific media and media definitions.

2005-03-22  Erik Hjortsberg  <erik@katastrof.nu>

	* decrease the minimum camera distance 

2005-03-22  Erik Hjortsberg  <erik@katastrof.nu>

	* fixed erronous normal definitions

2005-03-22  Erik Hjortsberg  <erik@katastrof.nu>

	* modified the S_LOG* macros and included the LogginService.h file in EmberOgrePrerequisites.h. The idea is to use the macros for all logging actions.

2005-03-22  Erik Hjortsberg  <erik@katastrof.nu>

	* removed pig and squirrel pack
	* added fence bblocks and a sty blueprint
	* fixed the way the BluePrint calculates the orientations of buildin blocks

2003-05-21 Miguel Guzman (Aglanor)

	* The merchant now makes a sound when he speaks.
	He'll yell "get your pig here!" in a strangely spanish accent.

2005-03-20  Erik Hjortsberg  <erik@katastrof.nu>

	* autopackage, hmm... let's see where this leads
	* added ember icon and desktop file
	* bumped version to 0.3.0
	* added make_dist_media.sh, for autogenerating the media dir. run it in the root dir. It requires a "media" dir directly under the root dir.

2005-03-20  Erik Hjortsberg  <erik@katastrof.nu>

	* EmberOgre.h: added convenience getRootSceneNode
	* EmberOgre.h: added and cleaned up comments