@@ -43,6 +43,13 @@
 				<Property Name="Text" Value="Bind" /> 
 				<Property Name="InheritsAlpha" Value="True" /> 
 			</Window>
+			<Window Type="TaharezLook/Button" Name="Remove">
+				<Property Name="Enabled" Value="False" /> 
+				<Property Name="Position" Value="x:0.2 y:0.8" /> 
+				<Property Name="Size" Value="w:0.2 h:0.1" /> 
+				<Property Name="Text" Value="Remove" /> 
+				<Property Name="InheritsAlpha" Value="True" /> 
+			</Window>			
 			<Window Type="TaharezLook/Button" Name="CreateNew">
 				<Property Name="Position" Value="x:0.4 y:0.9" /> 
 				<Property Name="Size" Value="w:0.2 h:0.1" /> 
