@@ -1,5 +1,9 @@
 2005-03-30  Erik Hjortsberg  <erik@katastrof.nu>
 
+	* Added ability to remove building blocks and to create new construction from scratch.
+
+2005-03-30  Erik Hjortsberg  <erik@katastrof.nu>
+
 	* Don't forget to copy .skeleton files.
 
 2005-03-30  Erik Hjortsberg  <erik@katastrof.nu>
